fix(ui): enable scrollbar when login and register component content overflow

--- a/src/PSR.Angular/projects/psr/src/app/auth/components/register/register.component.scss
+++ b/src/PSR.Angular/projects/psr/src/app/auth/components/register/register.component.scss
@@ -1,7 +1,7 @@
 :host {
     @apply block min-h-full;
     @apply flex flex-col justify-center items-center;
-    @apply h-screen px-4 py-12;
+    @apply h-screen px-4 py-12 overflow-y-auto;
 }
 
 :host::after {
